--- a/app/index.html
+++ b/app/index.html
@@ -97,6 +97,25 @@
 <!-- Modules -->
 <script src="partials/modules/modulesController.js"></script>
 
+<!-- Academics -->
+  <!-- Applicant Registration -->
+    <script src="partials/academics/applicantRegistration/applicantRegistrationController.js"></script>
+    <script src="partials/academics/applicantRegistration/applicantRegistrationServices.js"></script>
+  <!-- Attendance -->
+    <script src="partials/academics/attendance/attendanceController.js"></script>
+    <script src="partials/academics/attendance/attendanceServices.js"></script>
+  <!-- Batch Summary -->
+    <script src="partials/academics/batchSummary/batchSummaryController.js"></script>
+    <script src="partials/academics/batchSummary/batchSummaryServices.js"></script>
+  <!-- Discipline -->
+    <script src="partials/academics/discipline/disciplineController.js"></script>
+    <script src="partials/academics/discipline/disciplineServices.js"></script>
+  <!-- myProfile -->
+    <script src="partials/academics/myProfile/myProfileController.js"></script>
+    <script src="partials/academics/myProfile/myProfileServices.js"></script>
+  <!-- Placements -->
+    <script src="partials/academics/placements/placementsController.js"></script>
+    <script src="partials/academics/placements/placementsServices.js"></script>
 
 <!-- Data Reports -->
   <!-- Reports -->
