--- a/app/index.html
+++ b/app/index.html
@@ -97,6 +97,32 @@
 <!-- Modules -->
 <script src="partials/modules/modulesController.js"></script>
 
+<!-- Administration -->
+  <!-- Settings -->
+  <script src="partials/administration/settings/settingsController.js"></script>
+  <script src="partials/administration/settings/settingsServices.js"></script>
+  <!-- Hostel -->
+  <script src="partials/administration/hostel/hostelController.js"></script>
+  <script src="partials/administration/hostel/hostelServices.js"></script>
+  <!-- Finance -->
+  <script src="partials/administration/finance/financeController.js"></script>
+  <script src="partials/administration/finance/financeServices.js"></script>
+  <!-- Transport -->
+  <script src="partials/administration/transport/transportController.js"></script>
+  <script src="partials/administration/transport/transportServices.js"></script>
+  <!-- Reminders -->
+  <script src="partials/administration/reminder/reminderController.js"></script>
+  <script src="partials/administration/reminder/reminderServices.js"></script>
+  <!-- Inventory -->
+  <script src="partials/administration/inventory/inventoryController.js"></script>
+  <script src="partials/administration/inventory/inventoryServices.js"></script>
+  <!-- Online Payment -->
+  <script src="partials/administration/onlinePayment/onlinePaymentController.js"></script>
+  <script src="partials/administration/onlinePayment/onlinePaymentServices.js"></script>
+  <!-- HR -->
+  <script src="partials/administration/hr/hrController.js"></script>
+  <script src="partials/administration/hr/hrServices.js"></script>
+
 <!-- Academics -->
   <!-- Applicant Registration -->
     <script src="partials/academics/applicantRegistration/applicantRegistrationController.js"></script>
